move the search results text next to the filters button and ensure the buttons and input outline are not hidden by other html elements

--- a/src/popup/pages/search/SearchResults.module.css
+++ b/src/popup/pages/search/SearchResults.module.css
@@ -1,17 +1,7 @@
-.search-results-title {
-  margin-block: var(--size-2) var(--size-1);
-  font-size: var(--font-size-2);
-}
-
 .search-results {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
   gap: var(--size-2);
-}
-
-.no-results {
-  color: var(--text-2);
-  margin-block-start: var(--size-2);
 }
