--- a/src/popup/pages/search/SortButton.module.css
+++ b/src/popup/pages/search/SortButton.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   gap: var(--size-1);
+  outline-offset: -1px;
 
   svg {
     inline-size: var(--size-3);
