--- a/src/popup/pages/search/index.module.css
+++ b/src/popup/pages/search/index.module.css
@@ -8,12 +8,13 @@
   }
 
   input {
-    outline-offset: 1px;
+    outline-offset: -1px;
   }
 }
 
 .filters {
   border-radius: var(--radius-2);
+  margin-block-end: var(--size-1);
 
   &:has([popover]:popover-open) [popovertarget] {
     background-color: var(--surface-3);
@@ -24,6 +25,11 @@
     justify-content: flex-end;
     align-items: center;
     gap: var(--size-1);
+
+    .search-results-text {
+      margin-inline-end: auto;
+      color: var(--text-2);
+    }
   }
 
   .filters-row {
